InsureFlow360/force-app/main/default/objects/Claim_Alert__e/Claim_Alert__e.object-meta.xml
<CustomObject>
    <label>Claim Alert</label>
    <pluralLabel>Claim Alerts</pluralLabel>
</CustomObject>