InsureFlow360/force-app/main/default/objects/Claim_Alert__e/fields/Alert_Type__c.field-meta.xml
<CustomField>
    <fullName>Alert_Type__c</fullName>
    <label>Alert Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>