InsureFlow360/force-app/main/default/objects/Claim_Alert__e/fields/Claim_Id__c.field-meta.xml
<CustomField>
    <fullName>Claim_Id__c</fullName>
    <label>Claim Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>