InsureFlow360/force-app/main/default/objects/Claim_Alert__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <inlineHelpText>Provide the Message details.</inlineHelpText>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>